cmake_minimum_required(VERSION 2.6)

add_executable(simple_forms WIN32 simple_forms.cpp)
add_executable(form_styles WIN32 form_styles.cpp)
add_executable(events WIN32 events.cpp)
add_executable(subclassing WIN32 subclassing.cpp)
add_executable(panels WIN32 panels.cpp)
add_executable(check_boxes WIN32 check_boxes.cpp)
add_executable(buttons WIN32 buttons.cpp)
add_executable(progressbar WIN32 progressbar.cpp)
add_executable(scrollbars WIN32 scrollbars.cpp)
add_executable(tree WIN32 tree.cpp)
add_executable(textbox WIN32 textbox.cpp)
