cmake_minimum_required(VERSION 2.6)


macro(add_example _name)
	if(WTF_DEBUG_MESSAGES)
		add_executable(${_name} ${_name}.cpp)
	else()
		add_executable(${_name} WIN32 ${_name}.cpp)
	endif()
endmacro()

add_example(buttons)
add_example(check_boxes)
add_example(combobox)
add_example(events)
add_example(examples)
add_example(form_styles)
add_example(inputbox)
add_example(panels)
add_example(progressbar)
add_example(scrollbars)
add_example(simple_forms)
add_example(subclassing)
add_example(textbox)
add_example(tree)
